Prepare wallet service for Render deployment